# mmgl

./: .gitignore  CMakeLists.txt  INSTALL.sh  README.md  ambientlight.cc  ambientlight.h  arealight.cc  arealight.h  bbox.cc  bbox.h  bvh_node.cc  bvh_node.h  camera.cc  camera.h  common.cc  common.h  intersection.cc  intersection.h  light.cc  light.h  main.cc  material.cc  material.h  plane.cc  plane.h  point.cc  point.h  pointlight.cc  pointlight.h  ray.cc  ray.h  scene.cc  scene.h  scene_config.cc  scene_config.h  sphere.cc  sphere.h  surface.cc  surface.h  triangle.cc  (+3 more)
examples/: main.cpp  minimal.cpp  simple.cpp  sphere.cpp  teapot.cpp  teapot.txt
include/core/: camera.h  scene.h
include/light/: ambientlight.h  arealight.h  light.h  pointlight.h
include/mmgl/: mmgl.h
include/mmgl/core/: camera.h  scene.h
include/mmgl/light/: ambientlight.h  arealight.h  light.h  pointlight.h
include/mmgl/surface/: bbox.h  bvh_node.h  intersection.h  material.h  ray.h  sphere.h  surface.h  triangle.h
include/mmgl/util/: common.h  exception.h  image.h  point.h  scene_config.h  thread_pool.h  vector.h
include/surface/: bbox.h  bvh_node.h  intersection.h  material.h  ray.h  sphere.h  surface.h  triangle.h
include/util/: scene_config.h  vector.h
src/core/: camera.cc  scene.cc
src/light/: ambientlight.cc  arealight.cc  light.cc  pointlight.cc
src/mmgl/core/: camera.cc  scene.cc
src/mmgl/light/: ambientlight.cc  arealight.cc  light.cc  pointlight.cc
src/mmgl/surface/: bbox.cc  bvh_node.cc  material.cc  ray.cc  sphere.cc  surface.cc  triangle.cc
src/mmgl/util/: common.cc  image.cc  point.cc  scene_config.cc  vector.cc
src/surface/: bbox.cc  bvh_node.cc  ray.cc  sphere.cc  surface.cc  triangle.cc
src/util/: common.cc  point.cc  vector.cc
